opam-version: "1.2"
name: "advent-of-code-2017"
version: "0.1"
maintainer: "Miguel Molina <miguel@erizocosmi.co>"
build: [
  ["jbuilder" "build"]
]
install: ["jbuilder" "install"]
depends: [
  "base"
  "stdio"
  "ppx_sexp_conv"
  "ppx_type_conv"
  "ppx_compare"
  "jbuilder" {build & >= "1.0+beta12"}
]
